RESOLVED FIXED278122
offset-path layout with xywh() is wrong
https://bugs.webkit.org/show_bug.cgi?id=278122
Summary offset-path layout with xywh() is wrong
Simon Fraser (smfr)
Reported 2024-08-14 14:19:07 PDT
Created attachment 472157 [details] Test case We're offset-path it as a transform that moves a box from its laid-out position, but it seems like it should really be overriding the normal layout, and positioning the box relative to the offset-path that comes from the containing block.
Attachments
Test case (886 bytes, text/html)
2024-08-14 14:19 PDT, Simon Fraser (smfr)
no flags
Radar WebKit Bug Importer
Comment 1 2024-08-14 14:22:16 PDT
Simon Fraser (smfr)
Comment 2 2024-08-14 15:10:55 PDT
EWS
Comment 3 2024-08-14 18:36:43 PDT
Committed 282269@main (30e04a9244c7): <https://commits.webkit.org/282269@main> Reviewed commits have been landed. Closing PR #32214 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.