offset-path layout with xywh() is wrong https://bugs.webkit.org/show_bug.cgi?id=278122 rdar://133877166

Reviewed by Tim Nguyen.

`BasicShapeXywh::path()` failed to apply the x() and y() to the path, resulting
in bad `offset-path` behavior.

* LayoutTests/TestExpectations:
* Source/WebCore/platform/graphics/PathTraversalState.h: Drive-by using #pragma once
* Source/WebCore/rendering/style/BasicShapes.cpp:
(WebCore::BasicShapeXywh::path const):

Canonical link: https://commits.webkit.org/282269@main